[tool.poetry]
name = "2022-coderoast-rpsls"
version = "0.1.0"
description = ""
authors = ["Sharlon Regales"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flakeheaven = "^0.11.1"
isort = "^5.10.1"
pytest = "^7.1.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
